# cornerstone

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Config.toml  Dockerfile  docker-compose.yml  justfile  readme.md
.github/workflows/: ci.yml
.sqlx/: query-0196c4a403aa2d0b13fd64abfed339fcdcaf2ed5449694e31814feb0a05f9544.json  query-1bc5a51762717e45292626052f0a65ac0b8a001798a2476ea86143c5565df399.json  query-2983c391d99ec62280021649943d6ac3586ecf9777670eef6b087bb8ff7ba26a.json  query-3386b6bbeb7d38223995a649ff3906eeb3725c324199bb949d40ba7faeb02f03.json  query-35279c5ce51b5389ede5b9a70db387f222cd793e3884e9123ac9c4c80dbc34b9.json  query-39b17631a9b5d6b9ebb6d7392a2a332f43a0016b62dc5baddf99153efae9e2ab.json  query-40e5efb98e297490748037f5cae7e4e1ba105dca5169d200eb40b724f74cc6d9.json  query-4d4af1aa68697d04adc0c294390e10c8e9c45f3917eb3395ce9d6b82735b967b.json  query-56f468030c659645e47c69876d41ee746a809af101efd60a6a8a9395a0670b28.json  query-6fe74ed0039aaa0c5be1b74bbc897f1bd6a6a6fb54d4acb7ce4e827c48c96385.json  query-725bc1585512a21ecdb4b256f6a461fa620e40b8af775ff01791f4bf08cb196f.json  query-77b7fa71315ea7d015df56bab71d78a4d5acb35bad052714237453b11cd67423.json  query-a6b03b9ab3a50aa4d194ccd707ae5c544483647043d5f82e453a56946690af68.json  query-b4e097509bcd3433252b018a568a7d57a79a231a329a948e99bda8bd882fa40b.json  query-d35d9ae408052211205dc0e8ebaa850dd95f161fd6fdc5ebafcb8d3cf7e22930.json  query-dc63db74a3158185cbe943bb4f9649e968469a15a9aa33357615bdb7839f58d1.json  query-e1bc3925c6a1c7ba7e5159846112a964a4d1736ffd3ab86a7589c09187560571.json  query-ecf1c178b5343b37472746466ef31adb550378ab1a419f10d0bc8d23df6236c1.json  query-fd29e5539c03b1d874e9f0805b24bdee2062f7bb6e14d0344a45f507d02843e8.json
backend/: Cargo.toml  build.rs  database.db
backend/migrations/: 20250626000000_create_users_table.sql  20250627234703_create_contacts_table.sql  20250703185412_create_refresh_tokens_table.sql
backend/migrations/postgres/: 20250626000001_create_users_table.sql  20250627234704_create_contacts_table.sql  20250703185413_create_refresh_tokens_table.sql
backend/migrations/sqlite/: 20250626000000_create_users_table.sql  20250627234703_create_contacts_table.sql  20250703185412_create_refresh_tokens_table.sql
backend/src/: auth.rs  config.rs  db.rs  error.rs  extractors.rs  lib.rs  main.rs  web_server.rs
backend/static/: index.html
backend/static/slint-build/: index.html
backend/static/wasm/: frontend.d.ts  frontend.js  frontend_bg.wasm  frontend_bg.wasm.d.ts
backend/tests/: api_tests.rs  contact_api.rs  helpers.rs
common/: Cargo.toml
common/src/: lib.rs  utils.rs
common/ui/: definitions.slint
frontend/: Cargo.toml  build.rs
frontend/src/: lib.rs  main.rs  runner.rs
frontend/ui/: app.slint
frontend_slint/: Cargo.toml
frontend_slint/src/: lib.rs  runner.rs
frontend_slint/static/wasm-pack/: frontend.d.ts  frontend.js  package.json
frontend_slint/ui/: app.slint
frontend_svelte/: package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend_svelte/src/: app.html
frontend_svelte/src/lib/: api.ts  auth.ts  types.ts
frontend_svelte/src/routes/: +layout.svelte  +page.svelte
frontend_svelte/src/routes/contacts/: +layout.ts  +page.svelte  +page.ts
frontend_svelte/src/routes/contacts/[id]/: +page.svelte  +page.ts
frontend_svelte/src/routes/contacts/new/: +page.svelte
frontend_svelte/src/routes/login/: +page.svelte
frontend_svelte/src/routes/register/: +page.svelte
