[workspace]
resolver = "2"
members = [
    "backend",
    "frontend_slint",
    "common",
]

[workspace.dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
axum-extra = "0.10.1"
base64 = "0.22.1"
bcrypt = "0.17.0"
chrono = "0.4.41"
common = { path = "common" }
dotenvy = "0.15.7"
dprint-plugin-typescript = "0.95.8"
figment = "0.10.19"
hex = "0.4.3"
http-body-util = "0.1.3"
hyper = "1.6.0"
jsonwebtoken = "9.3.1"
once_cell = "1.21.3"
rand = "0.9.1"
reqwest = "0.12.20"
serde = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.8"
slint = "1.12.1"
slint-build = "1.12.1"
sqlx = { version = "0.8.6", default-features = false }
thiserror = "2.0.12"
tokio = "1.45.1"
toml = "0.8.23"
tower = "0.5.2"
tower-http = "0.6.6"
tower_governor = "0.7.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
ts-rs = "11.0.1"
utoipa = "5.4.0"
utoipa-swagger-ui = "9.0.2"
uuid = "1.17"
validator = "0.20.0"
