[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.45.1", features = ["full", "rt-multi-thread"] }
reqwest = "0.12.20"
chrono = "0.4.41"
tower-http = { version = "0.6.6", features = ["fs", "cors", "trace", "request-id"] }
common = { path = "../common" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
dotenvy = "0.15.7"
anyhow = "1.0.98"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
jsonwebtoken = "9.3.1"
bcrypt = "0.17.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
once_cell = "1.21.3"
figment = { version = "0.10.19", features = ["toml", "env"] }
validator = { version = "0.20.0", features = ["derive"] }
rand = "0.9.1"
base64 = "0.22.1"
sha2 = "0.10.8"
hex = "0.4.3"
tower_governor = "0.7.0"
thiserror = "2.0.12"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "openapi_extensions"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa-axum = "0.2.0"

[features]
default = ["svelte-ui"]
svelte-ui = []
slint-ui = []

[lib]
name = "backend"
path = "src/lib.rs"

[dev-dependencies]
# Dependencies needed ONLY for running tests and benchmarks

# For making test requests and handling response bodies
hyper = { version = "1.4.1", features = ["full"] }
# For collecting the response body into bytes.
http-body-util = "0.1"
# For deserializing JSON in our tests
serde_json = "1.0.140"
# For the `ServiceExt::oneshot` testing utility
tower = { version = "0.5.2", features = ["full"] }
