[package]
name = "common"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "type-exporter"
path = "src/bin/type_exporter.rs"
required-features = ["ts_export"] # This binary only works when the feature is enabled

[[bin]]
name = "workspace_helper"
path = "src/bin/workspace_helper.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
validator = { workspace = true, features = ["derive"] }
utoipa = { workspace = true, features = ["axum_extras", "chrono"] }
toml = { workspace = true }

# ts-rs as an optional dependency for the svelte UI
ts-rs = { workspace = true, features = ["format"], optional = true }

# The 'format' feature of ts-rs requires this dependency to be available
dprint-plugin-typescript = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sqlx = { workspace = true, features = ["macros"] }

# You can remove ts_export from the default features when you chose slint-ui in the backend
[features]
default = ["ts_export"]
ts_export = ["dep:ts-rs", "dep:dprint-plugin-typescript"]
db-sqlite = ["sqlx/sqlite"]
db-postgres = ["sqlx/postgres"]
