[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
slint = "1.12.1"
common = { path = "../common" }
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
wasm-bindgen-futures = "0.4.50"
tokio = "1.45.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.100"}
wasm-bindgen-futures = { version = "0.4.50" }
console_error_panic_hook = "0.1.7"

[build-dependencies]
slint-build = "1.12.1"

[lib]
name = "frontend"
crate-type = ["cdylib"]

[[bin]]
name = "frontend_bin"
path = "src/main.rs"

[profile.dev]
panic = "unwind"
